<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

   <RelativeLayout
        android:id="@+id/glview_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true" 
        android:background="#80ffffff">

        <android.opengl.GLSurfaceView
            android:id="@+id/glview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="#00000000" />

        <SurfaceView
            android:id="@+id/surface"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="#00000000" />
        <ImageView 
            android:id="@+id/camera_switch"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/p_switch_camera"/>
        <RelativeLayout
            android:id="@+id/camera_bar"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="0dp"
            android:background="#80d07890">
        <ImageView 
            android:id="@+id/camera"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:background="@drawable/p_camera_capture"/>
        <ImageView 
            android:id="@+id/camera_filter"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/p_camera_filter"/>
        <ImageView 
            android:id="@+id/camera_album"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/p_camera_album"/>
        </RelativeLayout>
        
        <ImageView 
            android:id="@+id/cameraFocus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/focus_normal"/>
        <TextView 
            android:id="@+id/cameraTitle"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:text="@string/zp"
            android:textSize="30sp"
            android:textColor="#ffffffff"
            android:background="#80d07890"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

        <RelativeLayout
            android:id="@+id/barlayout"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="#ffd07890">
        <RelativeLayout
            android:id="@+id/bartoplayout"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:background="#80d07890">
         <TextView
            android:id="@+id/skinWhiteTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:text="@string/skinwhite"
            />
        <SeekBar
            android:id="@+id/skBar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="120dp"/>
        </RelativeLayout>
       <RelativeLayout
            android:id="@+id/barbottmolayout"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="#80d07890">
          <TextView
            android:id="@+id/softskinTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:text="@string/softskin"
            />

        <SeekBar
            android:id="@+id/softskinBar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="120dp"
            />
        </RelativeLayout>
       
        </RelativeLayout>

       <TextView
            android:id="@+id/pixTxt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="90dp"
            android:textColor="#ffffffff"
            android:textSize="20dip"
            android:text="@string/PIX"
            />
       <TextView
            android:id="@+id/fpsTxt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="100dp"
            android:textColor="#fffff0f0"
            android:textSize="20dip"
            android:text="@string/FPS"
            />
    </RelativeLayout>

</RelativeLayout>